Fix buttons position on mobile view

--- a/web/assets/sass/style.sass
+++ b/web/assets/sass/style.sass
@@ -363,8 +363,10 @@ textarea
                 margin-top: 20px
 
         &__buttons
-            position: relative
-            bottom: 120px
+
+            &--position-reset
+                position: relative
+                bottom: 120px
 
     .mobile-scroll-anim
         display: flex
